--- a/src/main/resources/com/hogwartscompany/softclient/connexion.fxml
+++ b/src/main/resources/com/hogwartscompany/softclient/connexion.fxml
@@ -5,36 +5,60 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.RadialGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane onKeyPressed="#handleKeyPressed" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hogwartscompany.softclient.ConnexionController">
    <children>
-      <ImageView fitHeight="800.0" fitWidth="1200.0" layoutX="67.0" layoutY="11.0" opacity="0.5" pickOnBounds="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fitHeight="1000.0" fitWidth="1300.0" layoutX="67.0" layoutY="11.0" opacity="0.5" pickOnBounds="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <image>
             <Image url="@../../../assets/image/wallpaper.jpg" />
          </image>
          <viewport>
             <Rectangle2D />
          </viewport></ImageView>
-      <AnchorPane layoutX="178.0" layoutY="198.0" opacity="0.9" prefHeight="404.0" prefWidth="844.0" style="-fx-background-color: white; -fx-background-radius: 35;">
+      <AnchorPane layoutX="178.0" layoutY="178.0" opacity="0.9" prefHeight="500.0" prefWidth="900.0" style="-fx-background-color: white; -fx-background-radius: 35;" AnchorPane.bottomAnchor="178.0" AnchorPane.leftAnchor="178.0" AnchorPane.rightAnchor="178.0" AnchorPane.topAnchor="178.0">
          <children>
-            <ImageView fitHeight="161.0" fitWidth="311.0" layoutX="276.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="268.0" fitWidth="565.0" layoutX="230.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../assets/image/logo.png" />
                </image>
             </ImageView>
-            <Text layoutX="246.0" layoutY="244.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Annuaire d'entreprise" textAlignment="CENTER" wrappingWidth="352.0">
+            <Text layoutX="296.0" layoutY="392.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Annuaire d'entreprise" textAlignment="CENTER" wrappingWidth="352.0">
                <font>
-                  <Font name="Corbel Light" size="36.0" />
+                  <Font name="Script MT Bold" size="36.0" />
+               </font>
+               <fill>
+                  <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+                     <stops>
+                        <Stop>
+                           <color>
+                              <Color red="0.125490203499794" green="0.30980393290519714" blue="0.5490196347236633" />
+                           </color>
+                        </Stop>
+                        <Stop offset="0.006711409395973154">
+                           <color>
+                              <Color red="0.125490203499794" green="0.30980393290519714" blue="0.5490196347236633" />
+                           </color>
+                        </Stop>
+                        <Stop offset="1.0">
+                           <color>
+                              <Color red="0.545098066329956" green="0.7058823704719543" blue="0.8509804010391235" />
+                           </color>
+                        </Stop>
+                     </stops>
+                  </RadialGradient>
+               </fill>
+            </Text>
+            <Text fill="#1f8aa8" layoutX="51.0" layoutY="473.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pour vous connecter en administrateur : CTRL + TAB" textAlignment="CENTER" wrappingWidth="843.0">
+               <font>
+                  <Font name="Calibri Light" size="24.0" />
                </font>
             </Text>
-            <Text fill="#1f8aa8" layoutX="1.0" layoutY="296.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pour vous connecter en administrateur : CTRL + TAB" textAlignment="CENTER" wrappingWidth="843.0">
-               <font>
-                  <Font name="Corbel Light" size="24.0" />
-               </font>
-            </Text>
-            <Button fx:id="buttonGoToHomePage" alignment="CENTER" contentDisplay="CENTER" layoutX="330.0" layoutY="326.0" mnemonicParsing="false" onAction="#pressButtonConnexion" prefHeight="57.0" prefWidth="184.0" style="-fx-background-radius: 20; -fx-background-color: #14A1D9;" text="Se connecter" textFill="WHITE">
+            <Button fx:id="buttonGoToHomePage" alignment="CENTER" contentDisplay="CENTER" layoutX="369.0" layoutY="554.0" mnemonicParsing="false" onAction="#pressButtonConnexion" prefHeight="45.0" prefWidth="200.0" style="-fx-background-radius: 20; -fx-background-color: #204F8C; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.5), 10, 0, 0, 0);" text="Se connecter" textFill="WHITE">
                <font>
                   <Font name="Corbel Light" size="24.0" />
                </font>
