--- a/src/main/resources/com/hogwartscompany/softclient/detailsWorksite.fxml
+++ b/src/main/resources/com/hogwartscompany/softclient/detailsWorksite.fxml
@@ -18,110 +18,131 @@
             <Image url="@../../../assets/image/wallpaper.jpg" />
          </image>
       </ImageView>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="126.0" layoutY="14.0" prefHeight="53.0" prefWidth="549.0" style="-fx-background-color: #80D2F2; -fx-background-radius: 25;" text="Détails site de travail" textAlignment="CENTER">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="88.0" layoutY="14.0" prefHeight="53.0" prefWidth="549.0" style="-fx-background-color: #56738C; -fx-background-radius: 20;" text="Détails site de travail" textAlignment="CENTER" textFill="#e4eaf2">
          <font>
-            <Font name="Lucida Sans Regular" size="26.0" />
+            <Font name="Script MT Bold" size="34.0" />
          </font>
       </Label>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="98.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="N° de site">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="98.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #8BB4D9; -fx-background-radius: 20;" text="N° de site">
          <font>
-            <Font size="16.0" />
+            <Font name="Corbel Light" size="18.0" />
          </font>
       </Label>
       <TextField fx:id="idWorksite" layoutX="152.0" layoutY="98.0" prefHeight="35.0" prefWidth="102.0" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="153.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Nom">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="153.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #8BB4D9; -fx-background-radius: 20;" text="Nom">
          <font>
-            <Font size="16.0" />
+            <Font name="Corbel Light" size="18.0" />
          </font>
       </Label>
       <TextField fx:id="nameWorksite" layoutX="152.0" layoutY="153.0" prefHeight="35.0" prefWidth="210.0" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="370.0" layoutY="153.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Type">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="370.0" layoutY="153.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #8BB4D9; -fx-background-radius: 20;" text="Type">
          <font>
-            <Font size="16.0" />
+            <Font name="Corbel Light" size="18.0" />
          </font>
       </Label>
       <TextField fx:id="typeWorksite" layoutX="497.0" layoutY="153.0" prefHeight="35.0" prefWidth="210.0" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="209.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Téléphone">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="209.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #8BB4D9; -fx-background-radius: 20;" text="Téléphone">
          <font>
-            <Font size="16.0" />
+            <Font name="Corbel Light" size="18.0" />
          </font>
       </Label>
       <TextField fx:id="phoneWorksite" layoutX="152.0" layoutY="209.0" prefHeight="35.0" prefWidth="345.0" />
       <TextField fx:id="lineAddress1" layoutX="152.0" layoutY="467.0" prefHeight="35.0" prefWidth="556.0" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="266.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Email">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="266.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #8BB4D9; -fx-background-radius: 20;" text="Email">
          <font>
-            <Font size="16.0" />
+            <Font name="Corbel Light" size="18.0" />
          </font>
       </Label>
       <TextField fx:id="emailWorksite" layoutX="152.0" layoutY="265.0" prefHeight="35.0" prefWidth="345.0" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="350.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Adresse">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="350.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #8BB4D9; -fx-background-radius: 20;" text="Adresse">
          <font>
-            <Font size="16.0" />
+            <Font name="Corbel Light" size="18.0" />
          </font>
       </Label>
       <TextField fx:id="addressWorksite" layoutX="152.0" layoutY="350.0" prefHeight="35.0" prefWidth="102.0" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="409.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Etage">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="409.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #8BB4D9; -fx-background-radius: 20;" text="Etage">
          <font>
-            <Font size="16.0" />
+            <Font name="Corbel Light" size="18.0" />
          </font>
       </Label>
       <TextField fx:id="buildingFloor" layoutX="152.0" layoutY="409.0" prefHeight="35.0" prefWidth="210.0" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="370.0" layoutY="409.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Bâtiment">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="370.0" layoutY="409.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #8BB4D9; -fx-background-radius: 20;" text="Bâtiment">
          <font>
-            <Font size="16.0" />
+            <Font name="Corbel Light" size="18.0" />
          </font>
       </Label>
       <TextField fx:id="buildingName" layoutX="497.0" layoutY="409.0" prefHeight="35.0" prefWidth="210.0" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="467.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Adresse">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="467.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #8BB4D9; -fx-background-radius: 20;" text="Adresse">
          <font>
-            <Font size="16.0" />
+            <Font name="Corbel Light" size="18.0" />
          </font>
       </Label>
       <TextField fx:id="lineAddress2" layoutX="152.0" layoutY="525.0" prefHeight="35.0" prefWidth="556.0" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="525.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Complement">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="525.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #8BB4D9; -fx-background-radius: 20;" text="Complement">
          <font>
-            <Font size="16.0" />
+            <Font name="Corbel Light" size="18.0" />
          </font>
       </Label>
       <TextField fx:id="departmentCode" layoutX="152.0" layoutY="577.0" prefHeight="35.0" prefWidth="210.0" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="577.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Département">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="577.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #8BB4D9; -fx-background-radius: 20;" text="Département">
          <font>
-            <Font size="16.0" />
+            <Font name="Corbel Light" size="18.0" />
          </font>
       </Label>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="370.0" layoutY="577.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Ville">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="370.0" layoutY="577.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #8BB4D9; -fx-background-radius: 20;" text="Ville">
          <font>
-            <Font size="16.0" />
+            <Font name="Corbel Light" size="18.0" />
          </font>
       </Label>
       <TextField fx:id="cityName" layoutX="497.0" layoutY="577.0" prefHeight="35.0" prefWidth="210.0" />
-      <Button fx:id="buttonUpdateWorksite" alignment="CENTER" contentDisplay="CENTER" layoutX="197.0" layoutY="631.0" mnemonicParsing="false" onAction="#updateWorksite" prefHeight="43.0" prefWidth="120.0" style="-fx-background-color: #14A1D9; -fx-background-radius: 15;" text="Modifier le site" textFill="WHITE">
+      <Button fx:id="buttonUpdateWorksite" alignment="TOP_CENTER" contentDisplay="RIGHT" layoutX="26.0" layoutY="631.0" mnemonicParsing="false" onAction="#updateWorksite" prefHeight="45.0" prefWidth="200.0" style="-fx-background-color: #205A8C; -fx-background-radius: 20; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.5), 10, 0, 0, 0);" text="Modifier le site" textFill="WHITE">
          <font>
-            <Font size="14.0" />
+            <Font name="Corbel Light" size="18.0" />
          </font>
-      </Button>
-      <Button fx:id="buttonDeleteWorksite" alignment="CENTER" contentDisplay="CENTER" layoutX="497.0" layoutY="631.0" mnemonicParsing="false" onAction="#deleteWorksite" prefHeight="43.0" prefWidth="149.0" style="-fx-background-color: #14A1D9; -fx-background-radius: 15;" text="Supprimer le site" textFill="WHITE">
-         <font>
-            <Font name="Lucida Sans Regular" size="14.0" />
-         </font>
-      </Button>
-      <Button fx:id="buttonClosePopUp" layoutX="1113.0" layoutY="19.0" mnemonicParsing="false" onAction="#closePopUp" prefHeight="43.0" prefWidth="51.0" style="-fx-background-color: #14A1D9; -fx-background-radius: 10;">
          <graphic>
             <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../assets/icons/quit.png" />
+                  <Image url="@../../../assets/icons/minerva.png" />
                </image>
             </ImageView>
          </graphic>
       </Button>
-      <Button fx:id="buttonDisplayAddress" layoutX="266.0" layoutY="353.0" mnemonicParsing="false" onAction="#displayAddress" style="-fx-background-color: #80D2F2; -fx-background-radius: 15;" text="Voir le détail des adresses">
+      <Button fx:id="buttonDeleteWorksite" alignment="CENTER" layoutX="974.0" layoutY="632.0" mnemonicParsing="false" onAction="#deleteWorksite" prefHeight="45.0" prefWidth="200.0" style="-fx-background-color: #205A8C; -fx-background-radius: 20; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.5), 10, 0, 0, 0);" text="Supprimer le site" textFill="WHITE">
          <font>
-            <Font size="14.0" />
-         </font></Button>
+            <Font name="Corbel Light" size="18.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../assets/icons/voldemort.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <Button fx:id="buttonClosePopUp" layoutX="1113.0" layoutY="19.0" mnemonicParsing="false" onAction="#closePopUp" prefHeight="43.0" prefWidth="51.0" style="-fx-background-color: #205A8C; -fx-background-radius: 20; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.5), 10, 0, 0, 0);">
+         <graphic>
+            <ImageView fitHeight="35.0" fitWidth="35.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../assets/icons/reliques.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <Button fx:id="buttonDisplayAddress" alignment="CENTER" layoutX="262.0" layoutY="345.0" mnemonicParsing="false" onAction="#displayAddress" prefHeight="45.0" prefWidth="200.0" style="-fx-background-color: #205A8C; -fx-background-radius: 20; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.5), 10, 0, 0, 0);" text="Détail adresses" textFill="WHITE">
+         <font>
+            <Font name="Corbel Light" size="18.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="27.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../assets/icons/baguette.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
       <Separator layoutX="711.0" layoutY="9.0" orientation="VERTICAL" prefHeight="679.0" prefWidth="18.0" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="770.0" layoutY="14.0" prefHeight="53.0" prefWidth="326.0" style="-fx-background-color: #80D2F2; -fx-background-radius: 25;" text="Liste des services" textAlignment="CENTER">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="770.0" layoutY="14.0" prefHeight="53.0" prefWidth="326.0" style="-fx-background-color: #56738C; -fx-background-radius: 20;" text="Services associés" textAlignment="CENTER" textFill="#e4eaf2">
          <font>
-            <Font name="Lucida Sans Regular" size="26.0" />
+            <Font name="Script MT Bold" size="34.0" />
          </font>
       </Label>
       <TableView fx:id="listServicesOfWorksite" layoutX="745.0" layoutY="98.0" prefHeight="511.0" prefWidth="429.0">
